disabled embedded gwt jetty when launching gwt-debug and gwt-run. By default gwt-debug will start up Jetty8. This change also enables hosted mode to be run with tomcat or other servers.